--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId 'com.ogoons.odytimelineviewdemo'
+        applicationId 'com.ogoons.ogtimelineviewdemo'
         minSdkVersion 15
         targetSdkVersion 27
         versionCode 1
@@ -30,5 +30,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation project(':odytimelineview')
+    implementation project(':ogtimelineview')
 }
